// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ButtonSpinner Default 1`] = `
<svg
  className="btn-spinner"
  fill="none"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <circle
    className="opacity-25"
    cx="12"
    cy="12"
    r="10"
    stroke="currentColor"
    strokeWidth="4"
  />
  <path
    className="opacity-75"
    d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"
    fill="currentColor"
  />
</svg>
`;

exports[`Storyshots Calendar Default 1`] = `
<div
  className="calendar "
>
  <div
    className="header  "
  >
    <div
      className="left-arrow-container "
    >
      <div
        className="arrow-div  "
        onClick={[Function]}
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 320 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M34.52 239.03L228.87 44.69c9.37-9.37 24.57-9.37 33.94 0l22.67 22.67c9.36 9.36 9.37 24.52.04 33.9L131.49 256l154.02 154.75c9.34 9.38 9.32 24.54-.04 33.9l-22.67 22.67c-9.37 9.37-24.57 9.37-33.94 0L34.52 272.97c-9.37-9.37-9.37-24.57 0-33.94z"
          />
        </svg>
      </div>
    </div>
    <div
      className="month-container "
    >
      <span
        className="month-class "
      >
        February 2021
      </span>
    </div>
    <div
      className="right-arrow-container "
      onClick={[Function]}
    >
      <div
        className="arrow-div "
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 320 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M285.476 272.971L91.132 467.314c-9.373 9.373-24.569 9.373-33.941 0l-22.667-22.667c-9.357-9.357-9.375-24.522-.04-33.901L188.505 256 34.484 101.255c-9.335-9.379-9.317-24.544.04-33.901l22.667-22.667c9.373-9.373 24.569-9.373 33.941 0L285.475 239.03c9.373 9.372 9.373 24.568.001 33.941z"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    className="days-container "
  >
    <div
      className="days-class "
    >
      Su
    </div>
    <div
      className="days-class "
    >
      Mo
    </div>
    <div
      className="days-class "
    >
      Tu
    </div>
    <div
      className="days-class "
    >
      We
    </div>
    <div
      className="days-class "
    >
      Th
    </div>
    <div
      className="days-class "
    >
      Fr
    </div>
    <div
      className="days-class "
    >
      Sa
    </div>
  </div>
  <div
    className="rows"
  >
    <div
      className="row-item "
    >
      <div
        className="tile-class  hover:bg-gray-100   fa text-gray-300 pointer-events-none"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "paddingTop": "15%",
          }
        }
      >
        <span
          className="tile-characters-class  "
        >
          31
        </span>
      </div>
      <div
        className="tile-class  hover:bg-gray-100    cursor-pointer"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "paddingTop": "15%",
          }
        }
      >
        <span
          className="tile-characters-class  "
        >
          1
        </span>
      </div>
      <div
        className="tile-class  hover:bg-gray-100    cursor-pointer"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "paddingTop": "15%",
          }
        }
      >
        <span
          className="tile-characters-class  "
        >
          2
        </span>
      </div>
      <div
        className="tile-class  hover:bg-gray-100    cursor-pointer"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "paddingTop": "15%",
          }
        }
      >
        <span
          className="tile-characters-class  "
        >
          3
        </span>
      </div>
      <div
        className="tile-class  hover:bg-gray-100    cursor-pointer"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "paddingTop": "15%",
          }
        }
      >
        <span
          className="tile-characters-class  "
        >
          4
        </span>
      </div>
      <div
        className="tile-class  hover:bg-gray-100    cursor-pointer"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "paddingTop": "15%",
          }
        }
      >
        <span
          className="tile-characters-class  "
        >
          5
        </span>
      </div>
      <div
        className="tile-class  hover:bg-gray-100    cursor-pointer"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "paddingTop": "15%",
          }
        }
      >
        <span
          className="tile-characters-class  "
        >
          6
        </span>
      </div>
    </div>
    <div
      className="row-item "
    >
      <div
        className="tile-class  hover:bg-gray-100    cursor-pointer"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "paddingTop": "15%",
          }
        }
      >
        <span
          className="tile-characters-class  "
        >
          7
        </span>
      </div>
      <div
        className="tile-class  hover:bg-gray-100    cursor-pointer"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "paddingTop": "15%",
          }
        }
      >
        <span
          className="tile-characters-class  "
        >
          8
        </span>
      </div>
      <div
        className="tile-class  hover:bg-gray-100    cursor-pointer"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "paddingTop": "15%",
          }
        }
      >
        <span
          className="tile-characters-class  "
        >
          9
        </span>
      </div>
      <div
        className="tile-class  hover:bg-gray-100    cursor-pointer"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "paddingTop": "15%",
          }
        }
      >
        <span
          className="tile-characters-class  "
        >
          10
        </span>
      </div>
      <div
        className="tile-class  hover:bg-gray-100    cursor-pointer"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "paddingTop": "15%",
          }
        }
      >
        <span
          className="tile-characters-class  "
        >
          11
        </span>
      </div>
      <div
        className="tile-class  hover:bg-gray-100    cursor-pointer"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "paddingTop": "15%",
          }
        }
      >
        <span
          className="tile-characters-class  "
        >
          12
        </span>
      </div>
      <div
        className="tile-class  hover:bg-gray-100    cursor-pointer"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "paddingTop": "15%",
          }
        }
      >
        <span
          className="tile-characters-class  "
        >
          13
        </span>
      </div>
    </div>
    <div
      className="row-item "
    >
      <div
        className="tile-class  hover:bg-gray-100    cursor-pointer"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "paddingTop": "15%",
          }
        }
      >
        <span
          className="tile-characters-class  "
        >
          14
        </span>
      </div>
      <div
        className="tile-class  hover:bg-gray-100    cursor-pointer"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "paddingTop": "15%",
          }
        }
      >
        <span
          className="tile-characters-class  "
        >
          15
        </span>
      </div>
      <div
        className="tile-class  hover:bg-gray-100    cursor-pointer"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "paddingTop": "15%",
          }
        }
      >
        <span
          className="tile-characters-class  "
        >
          16
        </span>
      </div>
      <div
        className="tile-class  hover:bg-gray-100    cursor-pointer"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "paddingTop": "15%",
          }
        }
      >
        <span
          className="tile-characters-class  "
        >
          17
        </span>
      </div>
      <div
        className="tile-class  hover:bg-gray-100    cursor-pointer"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "paddingTop": "15%",
          }
        }
      >
        <span
          className="tile-characters-class  "
        >
          18
        </span>
      </div>
      <div
        className="tile-class  hover:bg-gray-100    cursor-pointer"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "paddingTop": "15%",
          }
        }
      >
        <span
          className="tile-characters-class  "
        >
          19
        </span>
      </div>
      <div
        className="tile-class  hover:bg-gray-100    cursor-pointer"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "paddingTop": "15%",
          }
        }
      >
        <span
          className="tile-characters-class  "
        >
          20
        </span>
      </div>
    </div>
    <div
      className="row-item "
    >
      <div
        className="tile-class  hover:bg-gray-100    cursor-pointer"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "paddingTop": "15%",
          }
        }
      >
        <span
          className="tile-characters-class  "
        >
          21
        </span>
      </div>
      <div
        className="tile-class  hover:bg-gray-100    cursor-pointer"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "paddingTop": "15%",
          }
        }
      >
        <span
          className="tile-characters-class  "
        >
          22
        </span>
      </div>
      <div
        className="tile-class  hover:bg-gray-100    cursor-pointer"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "paddingTop": "15%",
          }
        }
      >
        <span
          className="tile-characters-class  "
        >
          23
        </span>
      </div>
      <div
        className="tile-class  hover:bg-gray-100    cursor-pointer"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "paddingTop": "15%",
          }
        }
      >
        <span
          className="tile-characters-class  "
        >
          24
        </span>
      </div>
      <div
        className="tile-class  hover:bg-gray-100    cursor-pointer"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "paddingTop": "15%",
          }
        }
      >
        <span
          className="tile-characters-class  "
        >
          25
        </span>
      </div>
      <div
        className="tile-class  hover:bg-gray-100    cursor-pointer"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "paddingTop": "15%",
          }
        }
      >
        <span
          className="tile-characters-class  "
        >
          26
        </span>
      </div>
      <div
        className="tile-class  hover:bg-gray-100    cursor-pointer"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "paddingTop": "15%",
          }
        }
      >
        <span
          className="tile-characters-class  "
        >
          27
        </span>
      </div>
    </div>
    <div
      className="row-item "
    >
      <div
        className="tile-class  hover:bg-gray-100    cursor-pointer"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "paddingTop": "15%",
          }
        }
      >
        <span
          className="tile-characters-class  "
        >
          28
        </span>
      </div>
      <div
        className="tile-class  hover:bg-gray-100   fa text-gray-300 pointer-events-none"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "paddingTop": "15%",
          }
        }
      >
        <span
          className="tile-characters-class  "
        >
          1
        </span>
      </div>
      <div
        className="tile-class  hover:bg-gray-100   fa text-gray-300 pointer-events-none"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "paddingTop": "15%",
          }
        }
      >
        <span
          className="tile-characters-class  "
        >
          2
        </span>
      </div>
      <div
        className="tile-class  hover:bg-gray-100   fa text-gray-300 pointer-events-none"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "paddingTop": "15%",
          }
        }
      >
        <span
          className="tile-characters-class  "
        >
          3
        </span>
      </div>
      <div
        className="tile-class  hover:bg-gray-100   fa text-gray-300 pointer-events-none"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "paddingTop": "15%",
          }
        }
      >
        <span
          className="tile-characters-class  "
        >
          4
        </span>
      </div>
      <div
        className="tile-class  hover:bg-gray-100   fa text-gray-300 pointer-events-none"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "paddingTop": "15%",
          }
        }
      >
        <span
          className="tile-characters-class  "
        >
          5
        </span>
      </div>
      <div
        className="tile-class  hover:bg-gray-100   fa text-gray-300 pointer-events-none"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "paddingTop": "15%",
          }
        }
      >
        <span
          className="tile-characters-class  "
        >
          6
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Label Default 1`] = `
<label
  className="label"
>
  <span
    className="text-sm text-gray-400 ml-2"
  >
    Label
  </span>
</label>
`;

exports[`Storyshots Label Error 1`] = `
<label
  className="label"
>
  <span
    className="text-sm text-gray-400 ml-2"
  >
    Label
  </span>
  <span
    className="ml-1 text-red-600 text-sm"
  >
    - 
    Error
  </span>
</label>
`;
